--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@huddle01/iframe": "^0.0.15",
     "@huddle01/react": "^2.1.4",
     "@huddle01/server-sdk": "^2.3.5",
     "@tanstack/react-query": "^5.51.21",
@@ -22,7 +23,8 @@
     "react": "^18",
     "react-dom": "^18",
     "viem": "^2.19.2",
-    "wagmi": "^2.12.4"
+    "wagmi": "^2.12.4",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
     "@types/node": "^20",
